# minipix_uart_interface

./: .gitignore  .gitmodules  CMakeLists_8txt.html  README.md  README_8md.html  ____init_____8py.html  annotated.html  annotated_dup.js  classGatherer.html  classGatherer.js  classMinipixDummy.html  classMinipixDummy.js  classMinipixDummyLinux.html  classMinipixDummyLinux.js  classMinipixDummyLinux__coll__graph.map  classMinipixDummyLinux__coll__graph.md5  classMinipixDummy__inherit__graph.map  classMinipixDummy__inherit__graph.md5  classSerialPort.html  classSerialPort.js  classes.html  classsrc_1_1structures_1_1FrameDataMsg.html  classsrc_1_1structures_1_1FrameDataMsg.js  classsrc_1_1structures_1_1ImageMpxiToT.html  classsrc_1_1structures_1_1ImageMpxiToT.js  classsrc_1_1structures_1_1ImageToA.html  classsrc_1_1structures_1_1ImageToA.js  classsrc_1_1structures_1_1ImageToAToT.html  classsrc_1_1structures_1_1ImageToAToT.js  classsrc_1_1structures_1_1PixelDataMpxiToT.html  classsrc_1_1structures_1_1PixelDataMpxiToT.js  classsrc_1_1structures_1_1PixelDataToA.html  classsrc_1_1structures_1_1PixelDataToA.js  classsrc_1_1structures_1_1PixelDataToAToT.html  classsrc_1_1structures_1_1PixelDataToAToT.js  decoder_2README_8md.html  decoder_8py.html  decoder_8py.js  dir_000023_000061.html  dir_000027_000015.html  (+912 more)
.ci/: build.sh  docs.sh
software/: .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  README.md  install_dep.sh
software/baca_protocol/: baca_protocol.h
software/decoder/: .gitignore  README.md  colormaps.txt  data  decoder.py  env.sh  exporter.py  make_python_env.sh  requirements.txt  run_in_env.sh
software/decoder/data_export/: .gitignore
software/decoder/decode_payload_example/: convert_tpx3_packet.py
software/decoder/src/: convert_tpx3_packet.py  llcp.py  parse_file.py  pixel_decoder.py  structures.py  tpx3_luts.py  tpx3luts.py
software/dpd/: README.md  data_definitions.h
software/dpd/include/: dpd.h
software/dummy/: README.md
software/dummy/linux/: CMakeLists.txt  README.md  compile.sh  run.sh  sender.sh
software/dummy/linux/include/: README.md  baca_protocol.h  llcp  llcp_endian.h  llcp_minipix_messages.h  minipix_dummy.h  minipix_dummy.hpp  minipix_dummy_linux.h  serial_port.h
software/dummy/linux/include/llcp/: llcp_endian.h
software/dummy/linux/src/: dummy.cpp  main.cpp  minipix_dummy_linux.cpp  pixel_encoder.c  sender.cpp  serial_port.cpp
software/dummy/linux/src/llcp/: llcp_endian.c  llcp_minipix_messages.c
software/dummy/oneweb/: .ycm_extra_conf.py  CMakeLists.txt  run.sh
software/dummy/oneweb/include/: minipix_dummy_linux.h  pixel_encoder.h  serial_port.h
software/dummy/oneweb/src/: main.cpp  minipix_dummy.cpp  minipix_dummy_linux.cpp
software/dummy/shared/: README.md
software/dummy/shared/include/: minipix_dummy.h  pixel_encoder.h
software/dummy/shared/src/: minipix_dummy.cpp  pixel_encoder.c
software/dummy/stm32f4/: README.md
software/example_interface/: README.md
software/example_interface/linux/: .ycm_extra_conf.py  CMakeLists.txt  README.md  run.sh
software/example_interface/linux/include/: data_definitions.h  gatherer_interface_linux.h  minipix_interface.h  minipix_interface.hpp  minipix_interface_linux.h
software/example_interface/linux/include/llcp/: llcp.h
software/example_interface/linux/src/: example_interface.cpp  gatherer_interface_linux.cpp  main.cpp  minipix_interface_linux.cpp
software/example_interface/shared/: README.md
software/example_interface/shared/include/: gatherer_interface.h
software/example_interface/shared/src/: gatherer_interface.c
software/example_interface/stm32f411/: .ycm_extra_conf.py  CMakeLists.txt  README.md  debug.sh  flash.sh  gdb.conf
software/example_interface/stm32f411/include/: gatherer_interface_stm.h  llcp.h  minipix_interface_stm.h
software/example_interface/stm32f411/src/: gatherer_interface_stm.c  main.c  main.cpp  minipix_interface_stm.c  minipix_interface_stm.cpp
software/example_oneweb/: CMakeLists.txt  run.sh
software/example_oneweb/include/llcp/: llcp_endian.h  llcp_minipix_messages.h
software/example_oneweb/include/mui/: mui.h
software/example_oneweb/src/: main.cpp
software/example_oneweb/src/mui/: mui.c
software/gatherer/: CMakeLists.txt  README.md  run.sh
software/gatherer/data/: dummy_data.txt  hw_data.txt
software/gatherer/include/: data_definitions.h  gatherer.h  llcp.h  opencv_helpers.hpp  pixel_decoder.h
software/gatherer/include/llcp/: llcp.h
software/gatherer/src/: gatherer.cpp  main.cpp  pixel_decoder.c  serial_port.cpp
software/gatherer/src/llcp/: llcp_endian.c
software/llcp/: CMakeLists.txt  README.md  llcp.h  llcp_endian.h  llcp_minipix_messages.h
software/llcp/include/: llcp.h  llcp_endian.h  llcp_minipix_messages.h
software/llcp/src/: llcp.c  llcp_endian.c  llcp_minipix_messages.c
software/minipix_interface/: minipix_interface.h  minipix_interface.hpp
software/minipix_interface/include/: minipix_interface.h
software/minipix_interface/src/: minipix_interface.c
software/misc/: README.md
software/mui/: CMakeLists.txt  README.md
software/mui/fig/: mui_get_status.drawio.xml  mui_get_temperature.drawio.xml  mui_measure_frame.drawio.xml  mui_pwr.drawio.xml  mui_set_config.drawio.xml  mui_set_threshold.drawio.xml  mui_update_mask.drawio.xml
software/mui/include/: mui.h
software/mui/src/: mui.c
software/mui/src/llcp/: llcp.c  llcp_minipix_messages.c
software/tmux/: README.md
software/tmux/all_linux/: dummy_data  gatherer  received_data  session.yml
software/tmux/all_pc/: session.yml
software/tmux/all_virtual/: .tmuxinator.yml  session.yml
software/tmux/allpc/: example_interface  gatherer  session.yml
software/tmux/hw_minipix/: example_interface  session.yml
software/tmux/hw_mui/: session.yml
software/tmux/hw_mui_dummy_minipix/: session.yml
software/tmux/hw_mui_hw_minipix/: session.yml
software/tmux/interface_hw/: .tmuxinator.yml  minipix_dummy  session.yml
software/tmux/linux_mui_hw_minipix/: session.yml
software/tmux/oneweb/: example_oneweb  minipix_dummy  minipix_dummy_oneweb  session.yml
(+134 files in other folders)
